--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@
 
 [versioneer]
 VCS = git
-style = pep440-dev
+style = pep440
 versionfile_source = run_web_pycode/_version.py
 versionfile_build = run_web_pycode/_version.py
 tag_prefix =
